# retail-client-f

./: .env.example  .gitignore  Makefile  NOTES.md  README.md  pyproject.toml
src/retail_client/: __init__.py  client.py  config.py  errors.py  http.py  models.py
tests/integration/: conftest.py  test_tasks.py  test_users.py
tests/unit/: conftest.py  test_auth.py  test_client_operations.py  test_error_mapping.py  test_retry.py
