[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-client"
version = "0.1.0"
description = "Typed Python client for store-worker task management on the GoREST API."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "faker>=25.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
retail_client = ["py.typed"]

[tool.pytest.ini_options]
# The default test command runs unit tests only. Integration tests run via a separate command
# Integration tests run via `-m integration`.
addopts = "-m 'not integration' --strict-markers" #
testpaths = ["tests"]
markers = [
    "integration: hits the real GoREST API; requires GOREST_TOKEN",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true
